--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -83,7 +83,7 @@ Author=jekovcar
 [DIALOG_12]
 0=KeyDB
 3=Xreveal не съдържа ключове за декриптиране, нужна е база данни с ключове, за да работи. <a>За повече подробности</a>.
-4=KeyDB.cfg местоположение
+4=keydb.cfg местоположение
 6=&Търси ключ онлайн
 
 [DIALOG_13]
@@ -129,7 +129,7 @@ Author=jekovcar
 3=Брой опити за четене:
 4=Прекрати, когато грешките надвишат :
 5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status content to the rip log
+6=Append the drive status log to the rip log
 7=Show warning when creating a protected image
 
 [DIALOG_18]
@@ -161,7 +161,7 @@ Author=jekovcar
 1=Да
 2=Не
 3=Надстройка до Pro
-4=Няма ключове за декриптиране в KeyDB.cfg. Ще пробвате ли облачната функцията за декриптиране?
+4=Няма ключове за декриптиране в keydb.cfg. Ще пробвате ли облачната функцията за декриптиране?
 
 [DIALOG_23]
 0=Информация За Диска
@@ -197,7 +197,7 @@ Author=jekovcar
 5=<a>Submit manually?</a>
 6=Metafile:
 7=Email:
-8=Comment:
+8=Description:
 9=Uploading %s of %s
 10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
@@ -220,7 +220,7 @@ Author=jekovcar
 [DIALOG_32]
 0=AACS Certificate Decoder
 3=Type:
-4=Bus encryption:
+4=Flags:
 5=Length:
 6=ID:
 7=Reserved:
@@ -384,7 +384,7 @@ Author=jekovcar
 128=KeyDB файлове
 129=Файлове с база данни
 130=Изберете или пуснете WAV файла тук
-131=Изберете или пуснете KeyDB.cfg тук
+131=Изберете или пуснете keydb.cfg тук
 132=%u%% завършено
 133=Грешка при четене от устройство %C:!\nСектори: %u-%u
 134=Грешка при четене на %s!\nСектори: %u-%u
