--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -83,7 +83,7 @@ Author=Tanuki
 [DIALOG_12]
 0=KeyDB
 3=Xreveal 不包含任何解密密钥，你需要密钥库才能使其工作，<a>了解更多</a>。
-4=KeyDB.cfg 路径
+4=keydb.cfg 路径
 6=在线查找密钥(&F)
 
 [DIALOG_13]
@@ -161,7 +161,7 @@ Author=Tanuki
 1=是
 2=否
 3=升级至专业版
-4=在 KeyDB.cfg 中未找到密钥，是否在线查找密钥？
+4=在 keydb.cfg 中未找到密钥，是否在线查找密钥？
 
 [DIALOG_23]
 0=碟片信息
@@ -384,7 +384,7 @@ Author=Tanuki
 128=KeyDB 文件
 129=数据库文件
 130=请点击右侧按钮选择，或拖拽 WAV 文件到这里
-131=请点击右侧按钮选择，或拖拽 KeyDB.cfg 文件到这里
+131=请点击右侧按钮选择，或拖拽 keydb.cfg 文件到这里
 132=%u%% 已完成
 133=从光驱 %C 读取时出错！\n扇区： %u-%u
 134=读取 %s 时出错！\n扇区： %u-%u
