--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -65,7 +65,7 @@ Author=The Punisher
 12=Auto-Start deaktivieren
 
 [DIALOG_11]
-0=BD & UHD
+0=BD / UHD
 3=&Blu-ray Unterstützung aktivieren
 4=BD+ Schutz entfernen
 5=Region-Code entfernen
@@ -83,7 +83,7 @@ Author=The Punisher
 [DIALOG_12]
 0=KeyDB
 3=Xreveal beinhaltet keine Entschlüsselungsdateien. Bitte tragen sie hier die entsprechenden Pfade ein. <a>Weitere Details</a>
-4=KeyDB.cfg Speicherort
+4=keydb.cfg Speicherort
 6=Online nach einem Schlüssel &suchen
 
 [DIALOG_13]
@@ -161,7 +161,7 @@ Author=The Punisher
 1=Ja
 2=Nein
 3=Upgrade auf Pro
-4=Es wurde keine passende Entschlüsselungsdatei in der KeyDB.cfg gefunden. Möchten Sie die Entschlüsselung in unserer Cloud versuchen ?
+4=Es wurde keine passende Entschlüsselungsdatei in der keydb.cfg gefunden. Möchten Sie die Entschlüsselung in unserer Cloud versuchen ?
 
 [DIALOG_23]
 0=Disc-Informationen
