--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -83,7 +83,7 @@ Author=
 [DIALOG_12]
 0=KeyDB
 3=Xreveal doesn't contain any decryption keys, you'll need a <a>key database</a> to make it work.
-4=KeyDB.cfg location
+4=keydb.cfg location
 6=&Find keys online if not found locally
 
 [DIALOG_13]
@@ -129,7 +129,7 @@ Author=
 3=Read retry count:
 4=Abort when ignored errors exceed :
 5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status content to the rip log
+6=Append the drive status log to the rip log
 7=Show warning when creating a protected image
 
 [DIALOG_18]
@@ -151,7 +151,7 @@ Author=
 0=HD DVD
 3=&Enable HD DVD support
 4=Remove &first play title
-5=Remove &UOPs (User Operation Prohibitions)
+5=Remove &user prohibitions
 6=Remove &parental restrictions
 
 [DIALOG_21]
@@ -161,7 +161,7 @@ Author=
 1=Yes
 2=No
 3=Upgrade to Pro
-4=The disc key was not found in KeyDB.cfg. Do you want to find it online?
+4=The disc key was not found in keydb.cfg. Do you want to find it online?
 
 [DIALOG_23]
 0=Disc Information
@@ -220,7 +220,7 @@ Author=
 [DIALOG_32]
 0=AACS Certificate Decoder
 3=Type:
-4=Bus encryption:
+4=Flags:
 5=Length:
 6=ID:
 7=Reserved:
@@ -384,7 +384,7 @@ Author=
 128=KeyDB Files
 129=Database Files
 130=Select or drop the WAV file here
-131=Select or drop the KeyDB.cfg here
+131=Select or drop the keydb.cfg here
 132=%u%% complete
 133=Error reading from drive %C:!\nSectors: %u-%u
 134=Error reading %s!\nSectors: %u-%u
