--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -82,8 +82,8 @@ Author=Andex
 
 [DIALOG_12]
 0=KeyDB
-3=Note: Xreveal ne contient aucune clé de déchiffrement!\nVous devez utiliser le fichier <a>KeyDB.cfg</a> pour que Xreveal puisse fonctionner.
-4=Emplacement du fichier 'KeyDB.cfg'
+3=Note: Xreveal ne contient aucune clé de déchiffrement!\nVous devez utiliser le fichier <a>keydb.cfg</a> pour que Xreveal puisse fonctionner.
+4=Emplacement du fichier 'keydb.cfg'
 6=&Rechercher la clé en ligne si non trouvée localement
 
 [DIALOG_13]
@@ -161,7 +161,7 @@ Author=Andex
 1=Oui
 2=Non
 3=Passer à Pro
-4=Pas de clé de déchiffrement trouvée dans 'KeyDB.cfg'!\nVoulez-vous la rechercher en ligne?
+4=Pas de clé de déchiffrement trouvée dans 'keydb.cfg'!\nVoulez-vous la rechercher en ligne?
 
 [DIALOG_23]
 0=Informations sur le disque
@@ -220,7 +220,7 @@ Author=Andex
 [DIALOG_32]
 0=Décodage du certificat AACS
 3=Type:
-4=Bus Encryption:
+4=Flags:
 5=Longueur:
 6=ID:
 7=Réservé:
@@ -384,7 +384,7 @@ Author=Andex
 128=Fichiers KeyDB
 129=Fichiers Catalogue
 130=Sélectionner ou déposer un fichier WAV ici
-131=Sélectionner ou déposer le fichier 'KeyDB.cfg' ici
+131=Sélectionner ou déposer le fichier 'keydb.cfg' ici
 132=%u%% terminé!
 133=Erreur de lecture sur le lecteur %C:!\nSecteurs: %u-%u
 134=Erreur de lecture %s!\nSecteurs: %u-%u
