--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -83,7 +83,7 @@ Author=bovirus (bovirus@gmail.com)
 [DIALOG_12]
 0=KeyDB
 3=Xreveal non contiene alcuna chiave di decrittazione.\nPer farlo funzionare è necessario un database di chiavi. <a>Maggiori info</a>.
-4=Percorso file KeyDB.cfg
+4=Percorso file keydb.cfg
 6=&Cerca chiavi online se non trovate localmente
 
 [DIALOG_13]
@@ -161,7 +161,7 @@ Author=bovirus (bovirus@gmail.com)
 1=Sì
 2=No
 3=Passa a Pro
-4=La chiave del disco non è stata trovata in KeyDB.cfg.\nVuoi provare la funzione Pro "Trova chiave online"?
+4=La chiave del disco non è stata trovata in keydb.cfg.\nVuoi provare la funzione Pro "Trova chiave online"?
 
 [DIALOG_23]
 0=Informazioni disco
@@ -384,7 +384,7 @@ Author=bovirus (bovirus@gmail.com)
 128=Files KeyDB
 129=Files di Database
 130=Seleziona o trascina il file WAV qui
-131=Seleziona o trascina il file KeyDB.cfg qui
+131=Seleziona o trascina il file keydb.cfg qui
 132=%u%% completato
 133=Errore di lettura dall'unità %C:!\nSettori: %u-%u
 134=Errore nella lettura di %s!\nSettori: %u-%u
