--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -65,7 +65,7 @@ Author=Re*Index.(ot_inc)
 12=自動再生を無効化
 
 [DIALOG_11]
-0=BD & UHD
+0=BD / UHD
 3=Blu-ray のサポートを有効化(&E)
 4=BD+ を解除
 5=Blu-ray のリージョンコードを削除
@@ -83,7 +83,7 @@ Author=Re*Index.(ot_inc)
 [DIALOG_12]
 0=KeyDB
 3=Xreveal はキー情報を含んでいないため、使用をするには適切なファイルが必要です。詳しい情報は <a>こちら</a>をご確認ください。
-4=KeyDB.cfg の場所
+4=keydb.cfg の場所
 6=オンラインでキーを探す(&F)
 
 [DIALOG_13]
@@ -129,7 +129,7 @@ Author=Re*Index.(ot_inc)
 3=読み込みの再試行回数:
 4=無視されるエラーを超過時に中止するまでの回数:
 5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status content to the rip log
+6=Append the drive status log to the rip log
 7=Show warning when creating a protected image
 
 [DIALOG_18]
@@ -161,7 +161,7 @@ Author=Re*Index.(ot_inc)
 1=はい
 2=いいえ
 3=プロにアップグレード
-4=KeyDB.cfg に復号化キーがありませんでした。クラウド復号化機能を使用しますか？
+4=keydb.cfg に復号化キーがありませんでした。クラウド復号化機能を使用しますか？
 
 [DIALOG_23]
 0=ディスクの情報
@@ -197,7 +197,7 @@ Author=Re*Index.(ot_inc)
 5=<a>Submit manually?</a>
 6=Metafile:
 7=Email:
-8=Comment:
+8=Description:
 9=Uploading %s of %s
 10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
@@ -220,7 +220,7 @@ Author=Re*Index.(ot_inc)
 [DIALOG_32]
 0=AACS Certificate Decoder
 3=Type:
-4=Bus encryption:
+4=Flags:
 5=Length:
 6=ID:
 7=Reserved:
@@ -384,7 +384,7 @@ Author=Re*Index.(ot_inc)
 128=KeyDB ファイル
 129=データベースファイル
 130=WAV ファイルを選択またはドロップします
-131=KeyDB.cfg を選択またはドロップします
+131=keydb.cfg を選択またはドロップします
 132=%u%% 完了
 133=ドライブ %C: の読み取りエラーです！\nセクター: %u-%u
 134=%s の読み取り中にエラーが発生しました！\nセクター: %u-%u
