--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -83,7 +83,7 @@ Author=비너스걸 (VenusGirl)
 [DIALOG_12]
 0=KeyDB
 3=Xreveal에는 암호 해독 키가 없습니다. 작동하려면 키 데이터베이스가 필요합니다. <a>더 읽어 보세요</a>.
-4=KeyDB.cfg 위치
+4=keydb.cfg 위치
 6=온라인에서 키 찾기(&F)
 
 [DIALOG_13]
@@ -129,7 +129,7 @@ Author=비너스걸 (VenusGirl)
 3=읽기 재시도 횟수:
 4=무시된 오류가 초과하면 중단 :
 5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status content to the rip log
+6=Append the drive status log to the rip log
 7=Show warning when creating a protected image
 
 [DIALOG_18]
@@ -161,7 +161,7 @@ Author=비너스걸 (VenusGirl)
 1=예
 2=아니오
 3=프로로 업그레이드
-4=KeyDB.cfg에서 암호 해독 키를 찾을 수 없습니다. 클라우드 암호 해독 기능을 평가하시겠습니까?
+4=keydb.cfg에서 암호 해독 키를 찾을 수 없습니다. 클라우드 암호 해독 기능을 평가하시겠습니까?
 
 [DIALOG_23]
 0=디스크 정보
@@ -197,7 +197,7 @@ Author=비너스걸 (VenusGirl)
 5=<a>Submit manually?</a>
 6=Metafile:
 7=Email:
-8=Comment:
+8=Description:
 9=Uploading %s of %s
 10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
@@ -220,7 +220,7 @@ Author=비너스걸 (VenusGirl)
 [DIALOG_32]
 0=AACS Certificate Decoder
 3=Type:
-4=Bus encryption:
+4=Flags:
 5=Length:
 6=ID:
 7=Reserved:
@@ -384,7 +384,7 @@ Author=비너스걸 (VenusGirl)
 128=KeyDB 파일
 129=데이터베이스 파일
 130=여기에서 WAV 파일을 선택하거나 끌어다 놓습니다
-131=여기에서 KeyDB.cfg를 선택하거나 끌어다 놓습니다
+131=여기에서 keydb.cfg를 선택하거나 끌어다 놓습니다
 132=%u%% 완료
 133=C: 드라이브에서 읽는 동안 오류가 발생했습니다!\n섹터: %u-%u
 134=%s를 읽는 동안 오류가 발생했습니다!\n섹터: %u-%u
