--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -83,7 +83,7 @@ Author=Fresta, updated to 2.8.6 by adijos
 [DIALOG_12]
 0=KeyDB
 3=Xreveal nie zawiera żadnego klucza deszyfrującego, do jego działania potrzebna jest baza danych kluczy. <a>Czytaj więcej</a>.
-4=Lokalizacja KeyDB.cfg:
+4=Lokalizacja keydb.cfg:
 6=&Znajdź klucz online, jeśli nie jest dostępny lokalnie
 
 [DIALOG_13]
@@ -161,7 +161,7 @@ Author=Fresta, updated to 2.8.6 by adijos
 1=Tak
 2=Nie
 3=AKtualizacja do Pro
-4=Klucz dysku nie został znaleziony w KeyDB.cfg. Chcesz poszukać go online?
+4=Klucz dysku nie został znaleziony w keydb.cfg. Chcesz poszukać go online?
 
 [DIALOG_23]
 0=Informacje o dysku
@@ -279,7 +279,7 @@ Author=Fresta, updated to 2.8.6 by adijos
 23=Kopiowanie %s...
 24=%.1f MB/s
 25=Operacja zakończona powodzeniem!
-26=Xreveal nie mógł znaleźć klucza deszyfrującego w KeyDB.cfg
+26=Xreveal nie mógł znaleźć klucza deszyfrującego w keydb.cfg
 27=Strona &domowa
 28=Błąd podczas odczytu pliku, kod błędu: %s.
 29=Napęd
@@ -384,7 +384,7 @@ Author=Fresta, updated to 2.8.6 by adijos
 128=Pliki KeyDB
 129=Pliki bazy danych
 130=Wybierz lub upuść plik WAV tutaj
-131=Wybierz lub upuść plik KeyDB.cfg tutaj
+131=Wybierz lub upuść plik keydb.cfg tutaj
 132=%u%% ukończono
 133=Błąd odczytu z dysku %C:!\nSectors: %u-%u
 134=Błąd odczytu %s!\nSectors: %u-%u
