--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -83,7 +83,7 @@ Author=jekovcar
 [DIALOG_12]
 0=KeyDB
 3=Xreveal не содержит ключей дешифрования, для работы понадобится база данных ключей. <a>Больше подробностей</a>.
-4=Местоположение KeyDB.cfg
+4=Местоположение keydb.cfg
 6=&Найти ключ онлайн
 
 [DIALOG_13]
@@ -129,7 +129,7 @@ Author=jekovcar
 3=Счет попыток чтения:
 4=Прервать, если игнорируемых ошибок превышает :
 5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status content to the rip log
+6=Append the drive status log to the rip log
 7=Show warning when creating a protected image
 
 [DIALOG_18]
@@ -161,7 +161,7 @@ Author=jekovcar
 1=Да
 2=Нет
 3=Перейти на Pro
-4=Ключи расшифровки в KeyDB.cfg не найдены. Хотите оценить функцию облачного дешифрирования?
+4=Ключи расшифровки в keydb.cfg не найдены. Хотите оценить функцию облачного дешифрирования?
 
 [DIALOG_23]
 0=Информация о диске
@@ -197,7 +197,7 @@ Author=jekovcar
 5=<a>Submit manually?</a>
 6=Metafile:
 7=Email:
-8=Comment:
+8=Description:
 9=Uploading %s of %s
 10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
@@ -220,7 +220,7 @@ Author=jekovcar
 [DIALOG_32]
 0=AACS Certificate Decoder
 3=Type:
-4=Bus encryption:
+4=Flags:
 5=Length:
 6=ID:
 7=Reserved:
@@ -384,7 +384,7 @@ Author=jekovcar
 128=Файлы базы данных ключей
 129=Файлы базы данных
 130=Выберите или перетащите сюда WAV-файл.
-131=Выберите или перетащите сюда KeyDB.cfg.
+131=Выберите или перетащите сюда keydb.cfg.
 132=%u%% завершено
 133=Ошибка чтения с диска %C:!\nСекторы: %u-%u
 134=Ошибка чтения %s!\nСекторы: %u-%u
