--- a/Xreveal_SLV.ini
+++ b/Xreveal_SLV.ini
@@ -83,7 +83,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 [DIALOG_12]
 0=KeyDB
 3=Xreveal ne vsebuje ključa za dešifriranje, za delovanje potrebujete podatkovno zbirko ključev. <a>Preberi več</a>.
-4=Lokacija KeyDB.cfg
+4=Lokacija keydb.cfg
 6=&Find keys online if not found locally
 
 [DIALOG_13]
@@ -129,7 +129,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 3=Read retry count:
 4=Abort when ignored errors exceed :
 5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status content to the rip log
+6=Append the drive status log to the rip log
 7=Show warning when creating a protected image
 
 [DIALOG_18]
@@ -161,7 +161,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 1=Yes
 2=No
 3=Upgrade to Pro
-4=The disc key was not found in KeyDB.cfg. Do you want to find it online?
+4=The disc key was not found in keydb.cfg. Do you want to find it online?
 
 [DIALOG_23]
 0=Disc Information
@@ -197,7 +197,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 5=<a>Submit manually?</a>
 6=Metafile:
 7=Email:
-8=Comment:
+8=Description:
 9=Uploading %s of %s
 10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
@@ -220,7 +220,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 [DIALOG_32]
 0=AACS Certificate Decoder
 3=Type:
-4=Bus encryption:
+4=Flags:
 5=Length:
 6=ID:
 7=Reserved:
@@ -332,12 +332,12 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 76=Label
 77=Type
 78=Velikost
-79=Date
-80=Disc ID
-81=Date added
+79=Created
+80=DiscID
+81=Added
 82=MKB
 83=Main playlist
-84=BD+ date
+84=BD+ created
 85=
 86=VID
 87=MK
@@ -384,7 +384,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 128=KeyDB Files
 129=Database Files
 130=Select or drop the WAV file here
-131=Select or drop the KeyDB.cfg here
+131=Select or drop the keydb.cfg here
 132=%u%% complete
 133=Error reading from drive %C:!\nSectors: %u-%u
 134=Error reading %s!\nSectors: %u-%u
