--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -83,7 +83,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 [DIALOG_12]
 0=KeyDB
 3=Xreveal no contiene ninguna clave de descifrado, necesitarás una <a>base de datos de claves</a> para hacerlo funcionar.
-4=Ubicación de KeyDB.cfg
+4=Ubicación de keydb.cfg
 6=&Buscar claves en línea si no se encuentran localmente
 
 [DIALOG_13]
@@ -161,7 +161,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 1=Sí
 2=No
 3=Actualizar a Pro
-4=No se encontró la clave del disco en KeyDB.cfg. ¿Quieres buscarla en línea?
+4=No se encontró la clave del disco en keydb.cfg. ¿Quieres buscarla en línea?
 
 [DIALOG_23]
 0=Información del Disco
@@ -384,7 +384,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 128=Archivos KeyDB
 129=Archivos de Base de Datos
 130=Selecciona o suelta el archivo WAV aquí
-131=Selecciona o suelta el KeyDB.cfg aquí
+131=Selecciona o suelta el keydb.cfg aquí
 132=%u%% completado
 133=¡Error de lectura de la unidad %C:!\Sectores: %u-%u
 134=¡Error de lectura %s!\nSectores: %u-%u
