--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -161,7 +161,7 @@ Author=Harry Samwel, Sopor
 1=Ja
 2=Nej
 3=Uppgradera till Pro
-4=Nyckeln till skivan hittades inte i KeyDB.cfg. Vill du söka på nätet?
+4=Nyckeln till skivan hittades inte i keydb.cfg. Vill du söka på nätet?
 
 [DIALOG_23]
 0=Skivinformation
@@ -384,7 +384,7 @@ Author=Harry Samwel, Sopor
 128=KeyDB Filer
 129=Databas Filer
 130=Välj eller släpp WAV filer här
-131=Välj eller släpp KeyDB.cfg här
+131=Välj eller släpp keydb.cfg här
 132=%u%% färdig
 133=Felläsning från enhet %C:!\nSektorer: %u-%u
 134=Felläsning %s!\nSektorer: %u-%u
