--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -83,7 +83,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 [DIALOG_12]
 0=KeyDB
 3=Xreveal tidak berisi kunci decrypt apa pun, Anda memerlukan database kunci agar dapat berfungsi. <a>Untuk keterangan lebih lanjut</a>.
-4=lokasi KeyDB.cfg
+4=lokasi keydb.cfg
 6=&Cari key Daring
 
 [DIALOG_13]
@@ -129,7 +129,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 3=Read retry count:
 4=Abort when ignored errors exceed :
 5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status content to the rip log
+6=Append the drive status log to the rip log
 7=Show warning when creating a protected image
 
 [DIALOG_18]
@@ -161,7 +161,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 1=Ya
 2=Tidak
 3=Upgrade ke Pro
-4=Tidak ada key decryption yang ditemukan di KeyDB.cfg, Anda ingin untuk mengevaluasi fitur decryption awan?
+4=Tidak ada key decryption yang ditemukan di keydb.cfg, Anda ingin untuk mengevaluasi fitur decryption awan?
 
 [DIALOG_23]
 0=Informasi Disc
@@ -197,7 +197,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 5=<a>Submit manually?</a>
 6=Metafile:
 7=Email:
-8=Comment:
+8=Description:
 9=Uploading %s of %s
 10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
@@ -220,7 +220,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 [DIALOG_32]
 0=AACS Certificate Decoder
 3=Type:
-4=Bus encryption:
+4=Flags:
 5=Length:
 6=ID:
 7=Reserved:
@@ -384,7 +384,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 128=Berkas KeyDB
 129=Berkas Database
 130=Pilih atau drop berkas WAV disini
-131=Pilih atau drop KeyDB.cfg disini
+131=Pilih atau drop keydb.cfg disini
 132=%u%% selesai
 133=Masalah pembacaan dari drive %C:!\nSektor: %u-%u
 134=Masalah pembacaan %s!\nSektor: %u-%u
@@ -400,7 +400,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 144=(%u retries)
 145=Pause the operation
 146=Resume the operation
-147=Program
+147=Programs
 148=Busy
 149=&Check for updates
 150=&Save...
