Update SPA with minor changes

--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -129,7 +129,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 3=Número de reintentos de lectura:
 4=Abortar cuando los errores ignorados excedan :
 5=Copiar carpeta SSIF al copiar Blu-ray 3D a carpeta
-6=Agregar el contenido del estado de la unidad al registro de copiado
+6=Agregar el registro del estado de la unidad al registro de copiado
 7=Mostrar advertencia al crear una imagen protegida
 
 [DIALOG_18]
@@ -151,7 +151,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 0=HD DVD
 3=&Habilitar soporte para HD DVD
 4=Eliminar &primer título de reproducción
-5=Eliminar &UOPs (Prohibiciones de Operaciones de Usuario)
+5=Eliminar prohibiciones de &usuario
 6=Eliminar restricciones &parentales
 
 [DIALOG_21]
@@ -220,7 +220,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 [DIALOG_32]
 0=Decodificador de Certificados AACS
 3=Tipo:
-4=Cifrado de bus:
+4=Banderas:
 5=Longitud:
 6=ID:
 7=Reservado:
