--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -32,7 +32,7 @@ Author=jekovcar
 3=Нулиране
 
 [DIALOG_7]
-0=Състояние
+0=Информация
 
 [DIALOG_8]
 0=Общи
@@ -140,12 +140,7 @@ Author=jekovcar
 [DIALOG_19]
 0=Бързи клавиши
 3=Бързи системни клавиши за действия, докато Xreveal работи.
-4=Покажи меню в трея на Xreveal:
-5=Покажи прозореца с настройки:
-6=Активирай/Деактивирай Xreveal:
-7=Извличане в ISO файл:
-8=Извличане в папка:
-9=Съдържание Хеш Верификатор:
+4=Покажи меню в трея на Xreveal
 
 [DIALOG_20]
 0=HD DVD
@@ -227,6 +222,24 @@ Author=jekovcar
 8=Public key:
 9=Signature:
 10=Device number:
+11=Private key:
+12=Paste the private key to verify it
+
+[DIALOG_33]
+0=Change ISO Label
+1=&Change
+3=&ISO file:
+4=&Label:
+6=...
+7=di:name
+
+[DIALOG_34]
+0=Folder to ISO
+3=&Folder:
+4=&ISO file:
+5=&Label:
+6=Format:
+7=Start
 
 [DIALOG_A]
 0=Актуализация софтуер
@@ -296,7 +309,7 @@ Author=jekovcar
 40=&Състояние
 41=&Отвори в Explorer
 42=&Създай дъмп файл
-43=Съдържание Хеш Верификатор
+43=Съдържание Хеш Верификатор...
 44=Извличане на &твърд диск...
 45=Извличане в &имидж...
 46=&Активирай Xreveal
@@ -418,3 +431,7 @@ Author=jekovcar
 162=Optional
 163=File submitted successfully, thank you!
 164=Close this window
+165=Change ISO &Label...
+166=&Folder to ISO...
+167=Please select or drag a ISO file here
+168=Please select or drag a folder here
