--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -32,7 +32,7 @@ Author=Tanuki
 3=重置
 
 [DIALOG_7]
-0=状态
+0=信息
 
 [DIALOG_8]
 0=常规
@@ -140,12 +140,7 @@ Author=Tanuki
 [DIALOG_19]
 0=热键
 3=您可以创建系统范围的热键，以便在 Xreveal 运行时触发某些操作。
-4=显示系统托盘菜单:
-5=显示设置窗口:
-6=启用/禁用 Xreveal:
-7=复制到 ISO 文件:
-8=复制到文件夹:
-9=M2TS哈希值校验:
+4=显示系统托盘菜单
 
 [DIALOG_20]
 0=HD DVD
@@ -227,6 +222,24 @@ Author=Tanuki
 8=公钥:
 9=签名:
 10=设备号:
+11=Private key:
+12=Paste the private key to verify it
+
+[DIALOG_33]
+0=Change ISO Label
+1=&Change
+3=&ISO file:
+4=&Label:
+6=...
+7=di:name
+
+[DIALOG_34]
+0=Folder to ISO
+3=&Folder:
+4=&ISO file:
+5=&Label:
+6=Format:
+7=Start
 
 [DIALOG_A]
 0=软件更新
@@ -296,7 +309,7 @@ Author=Tanuki
 40=状态(&S)
 41=在资源管理器中打开(&O)
 42=生成元文件
-43=M2TS哈希值校验(&C)
+43=M2TS哈希值校验...(&C)
 44=复制到硬盘...(&F)
 45=复制到映像...(&I)
 46=启用 Xreveal(&E)
@@ -418,3 +431,7 @@ Author=Tanuki
 162=可选
 163=文件提交成功，谢谢!
 164=关闭此窗口
+165=Change ISO &Label...
+166=&Folder to ISO...
+167=Please select or drag a ISO file here
+168=Please select or drag a folder here
