--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -32,7 +32,7 @@ Author=The Punisher
 3=Standard
 
 [DIALOG_7]
-0=Status
+0=Info
 
 [DIALOG_8]
 0=Allgemein
@@ -140,12 +140,7 @@ Author=The Punisher
 [DIALOG_19]
 0=Hotkeys
 3=Hier können Sie System-Hotkeys erstellen die ausgeführt werden während Xreveal aktiv ist
-4=Zeige Xreveal-Menü:
-5=Zeige Einstellungen:
-6=Xreveal aktivieren/deaktivieren:
-7=Als ISO rippen:
-8=In einen Ordner rippen:
-9=Content Hash Kontrolle:
+4=Zeige Xreveal-Menü
 
 [DIALOG_20]
 0=HD DVD
@@ -227,6 +222,24 @@ Author=The Punisher
 8=Public key:
 9=Signatur:
 10=Device number:
+11=Private key:
+12=Paste the private key to verify it
+
+[DIALOG_33]
+0=Change ISO Label
+1=&Change
+3=&ISO file:
+4=&Label:
+6=...
+7=di:name
+
+[DIALOG_34]
+0=Folder to ISO
+3=&Folder:
+4=&ISO file:
+5=&Label:
+6=Format:
+7=Start
 
 [DIALOG_A]
 0=Software-Update
@@ -296,7 +309,7 @@ Author=The Punisher
 40=&Status
 41=&In Explorer öffnen
 42=&Erstelle Infodump-Datei
-43=Content Hash Kontrolle
+43=Content Hash Kontrolle...
 44=Auf &Festplattenlaufwerk rippen ...
 45=Als &Image auf Laufwerk rippen ...
 46=Xreveal &aktivieren
@@ -418,3 +431,7 @@ Author=The Punisher
 162=Optional
 163=Die Datei wurde erfolgreich übermittelt, vielen Dank!
 164=Dieses Fenster schließen.
+165=Change ISO &Label...
+166=&Folder to ISO...
+167=Please select or drag a ISO file here
+168=Please select or drag a folder here
