--- a/Xreveal_FIN.ini
+++ b/Xreveal_FIN.ini
@@ -32,7 +32,7 @@ Author=TJL
 3=Oletukset
 
 [DIALOG_7]
-0=Tila
+0=Info
 
 [DIALOG_8]
 0=Yleistä
@@ -140,12 +140,7 @@ Author=TJL
 [DIALOG_19]
 0=Pikanäppäimet
 3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
-4=Show Xreveal system tray menu:
-5=Show settings window:
-6=Enable/Disable Xreveal:
-7=Rip to ISO file:
-8=Rip to folder:
-9=Content Hash Verifier:
+4=Show Xreveal system tray menu
 
 [DIALOG_20]
 0=HD DVD
@@ -227,6 +222,24 @@ Author=TJL
 8=Public key:
 9=Signature:
 10=Device number:
+11=Private key:
+12=Paste the private key to verify it
+
+[DIALOG_33]
+0=Change ISO Label
+1=&Change
+3=&ISO file:
+4=&Label:
+6=...
+7=di:name
+
+[DIALOG_34]
+0=Folder to ISO
+3=&Folder:
+4=&ISO file:
+5=&Label:
+6=Format:
+7=Start
 
 [DIALOG_A]
 0=Ohjelmistopäivitys
@@ -296,7 +309,7 @@ Author=TJL
 40=&Tila
 41=&Open in Explorer
 42=&Metafile submission
-43=&Content Hash Verifier
+43=&Content Hash Verifier...
 44=Kopioi &kiintolevylle...
 45=Kopioi &levykuvaan...
 46=&Ota Xreveal käyttöön
@@ -418,3 +431,7 @@ Author=TJL
 162=Optional
 163=File submitted successfully, thank you!
 164=Close this window
+165=Change ISO &Label...
+166=&Folder to ISO...
+167=Please select or drag a ISO file here
+168=Please select or drag a folder here
