--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -32,7 +32,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 3=Kembalikan
 
 [DIALOG_7]
-0=Status
+0=Info
 
 [DIALOG_8]
 0=Umum
@@ -140,12 +140,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 [DIALOG_19]
 0=Tombol Pintasan
 3=Anda bisa membuat pintasan system-wide untuk memancing beberapa tindakan ketika Xreveal berjalan.
-4=Tampilkan Xreveal di menu baki sistem:
-5=Tampilkan jendela pengaturan:
-6=Aktifkan/Nonaktifkan Xreveal:
-7=Rip ke berkas ISO:
-8=Rip ke folder:
-9=Content Hash Verifier:
+4=Tampilkan Xreveal di menu baki sistem
 
 [DIALOG_20]
 0=HD DVD
@@ -227,6 +222,24 @@ Author= Lieba Natur Brilian (naturbrilian)
 8=Public key:
 9=Signature:
 10=Device number:
+11=Private key:
+12=Paste the private key to verify it
+
+[DIALOG_33]
+0=Change ISO Label
+1=&Change
+3=&ISO file:
+4=&Label:
+6=...
+7=di:name
+
+[DIALOG_34]
+0=Folder to ISO
+3=&Folder:
+4=&ISO file:
+5=&Label:
+6=Format:
+7=Start
 
 [DIALOG_A]
 0=Pembaruan Perangkat Lunak
@@ -296,7 +309,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 40=&Status
 41=&Buka di Explorer
 42=&Buat Berkas Dump
-43=&Content Hash Verifier
+43=&Content Hash Verifier...
 44=Rip ke &Folder...
 45=Rip ke berkas &ISO...
 46=&Aktifkan Xreveal
@@ -418,3 +431,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 162=Optional
 163=File submitted successfully, thank you!
 164=Close this window
+165=Change ISO &Label...
+166=&Folder to ISO...
+167=Please select or drag a ISO file here
+168=Please select or drag a folder here
