--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -32,7 +32,7 @@ Author=bovirus (bovirus@gmail.com)
 3=Ripristina
 
 [DIALOG_7]
-0=Stato
+0=Informazioni
 
 [DIALOG_8]
 0=Generale
@@ -140,12 +140,7 @@ Author=bovirus (bovirus@gmail.com)
 [DIALOG_19]
 0=Tasti scelta rapida
 3=È possibile creare hotkeys globali per richiamare alcune azioni mentre Xreveal è in uso.
-4=Mostra il menu di Xreveal nell'area delle notifiche:
-5=Mostra finestra delle opzioni:
-6=Abilita/Disabilita Xreveal:
-7=Rippa in un file ISO:
-8=Rippa nella cartella:
-9=Verificatore Hash contenuto:
+4=Mostra il menu di Xreveal nell'area delle notifiche
 
 [DIALOG_20]
 0=HD DVD
@@ -227,6 +222,24 @@ Author=bovirus (bovirus@gmail.com)
 8=Chiave pubblica:
 9=Firma:
 10=Numero unità:
+11=Private key:
+12=Paste the private key to verify it
+
+[DIALOG_33]
+0=Change ISO Label
+1=&Change
+3=&ISO file:
+4=&Label:
+6=...
+7=di:name
+
+[DIALOG_34]
+0=Folder to ISO
+3=&Folder:
+4=&ISO file:
+5=&Label:
+6=Format:
+7=Start
 
 [DIALOG_A]
 0=Aggiornamento programma
@@ -296,7 +309,7 @@ Author=bovirus (bovirus@gmail.com)
 40=&Stato
 41=&Apri in Explorer
 42=&Trasmissione metafile
-43=&Verificatore Hash contenuto
+43=&Verificatore Hash contenuto...
 44=Crea immagine nel &disco fisso...
 45=Crea file i&mmagine ISO...
 46=&Abilita Xreveal
@@ -418,3 +431,7 @@ Author=bovirus (bovirus@gmail.com)
 162=Opzionale
 163=File inoltrato con successo, grazie!
 164=Chiudi questa finestra
+165=Change ISO &Label...
+166=&Folder to ISO...
+167=Please select or drag a ISO file here
+168=Please select or drag a folder here
