--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -32,7 +32,7 @@ Author=Re*Index.(ot_inc)
 3=既定に戻す
 
 [DIALOG_7]
-0=状態
+0=情報
 
 [DIALOG_8]
 0=共通
@@ -140,12 +140,7 @@ Author=Re*Index.(ot_inc)
 [DIALOG_19]
 0=ホットキー
 3=Xreveal の実行中にシステム全体でいくつかのアクションをトリガーするためのホットキーを作成できます。
-4=Xreveal をシステムトレイメニューに表示:
-5=設定ウィンドウを表示:
-6=Xreveal を有効化/無効化:
-7=ISO ファイルでリッピング:
-8=フォルダーでリッピング:
-9=コンテンツハッシュを検証:
+4=Xreveal をシステムトレイメニューに表示
 
 [DIALOG_20]
 0=HD DVD
@@ -227,6 +222,24 @@ Author=Re*Index.(ot_inc)
 8=Public key:
 9=Signature:
 10=Device number:
+11=Private key:
+12=Paste the private key to verify it
+
+[DIALOG_33]
+0=Change ISO Label
+1=&Change
+3=&ISO file:
+4=&Label:
+6=...
+7=di:name
+
+[DIALOG_34]
+0=Folder to ISO
+3=&Folder:
+4=&ISO file:
+5=&Label:
+6=Format:
+7=Start
 
 [DIALOG_A]
 0=ソフトウェアのアップデート
@@ -418,3 +431,7 @@ Author=Re*Index.(ot_inc)
 162=Optional
 163=File submitted successfully, thank you!
 164=Close this window
+165=Change ISO &Label...
+166=&Folder to ISO...
+167=Please select or drag a ISO file here
+168=Please select or drag a folder here
