--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -32,7 +32,7 @@ Author=비너스걸 (VenusGirl)
 3=기본값
 
 [DIALOG_7]
-0=상태
+0=정보
 
 [DIALOG_8]
 0=일반
@@ -140,12 +140,7 @@ Author=비너스걸 (VenusGirl)
 [DIALOG_19]
 0=단축키
 3=시스템 전체 단축키를 생성하여 Xreveal이 실행되는 동안 일부 작업을 트리거할 수 있습니다.
-4=Xreveal 시스템 트레이 메뉴 표시:
-5=설정 창 표시:
-6=Xreveal 사용/사용 안 함:
-7=ISO 파일로 리핑:
-8=폴더로 리핑:
-9=콘텐츠 해시 확인자:
+4=Xreveal 시스템 트레이 메뉴 표시
 
 [DIALOG_20]
 0=HD DVD
@@ -227,6 +222,24 @@ Author=비너스걸 (VenusGirl)
 8=Public key:
 9=Signature:
 10=Device number:
+11=Private key:
+12=Paste the private key to verify it
+
+[DIALOG_33]
+0=Change ISO Label
+1=&Change
+3=&ISO file:
+4=&Label:
+6=...
+7=di:name
+
+[DIALOG_34]
+0=Folder to ISO
+3=&Folder:
+4=&ISO file:
+5=&Label:
+6=Format:
+7=Start
 
 [DIALOG_A]
 0=소프트웨어 업데이트
@@ -296,7 +309,7 @@ Author=비너스걸 (VenusGirl)
 40=상태(&S)
 41=탐색기에서 열기(&O)
 42=덤프 파일 만들기(&C)
-43=콘텐츠 해시 확인자
+43=콘텐츠 해시 확인자...
 44=하드 디스크에 복사(&H)...
 45=이미지로 복사(&I)...
 46=Xreveal 사용함(&E)
@@ -418,3 +431,7 @@ Author=비너스걸 (VenusGirl)
 162=Optional
 163=File submitted successfully, thank you!
 164=Close this window
+165=Change ISO &Label...
+166=&Folder to ISO...
+167=Please select or drag a ISO file here
+168=Please select or drag a folder here
