--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -32,7 +32,7 @@ Author=Fresta, updated to 2.8.6 by adijos
 3=Domyślnie
 
 [DIALOG_7]
-0=Status
+0=Info
 
 [DIALOG_8]
 0=Ogólne
@@ -140,12 +140,7 @@ Author=Fresta, updated to 2.8.6 by adijos
 [DIALOG_19]
 0=Skróty klawiszowe
 3=Utwórz skr. klaw. dla całego systemu, by uruchamiać określone działania, kiedy Xreveal działa.
-4=Pokaż menu paska systemowego Xreveal:
-5=Pokaż okno ustawień:
-6=Włącz/Wyłącz Xreveal:
-7=Zgraj do pliku ISO:
-8=Zgraj do folderu:
-9=Weryfikacja hash zawartości:
+4=Pokaż menu paska systemowego Xreveal
 
 [DIALOG_20]
 0=HD DVD
@@ -227,6 +222,24 @@ Author=Fresta, updated to 2.8.6 by adijos
 8=Klucz publiczny:
 9=Sygnatura:
 10=Numer urządzenia:
+11=Private key:
+12=Paste the private key to verify it
+
+[DIALOG_33]
+0=Change ISO Label
+1=&Change
+3=&ISO file:
+4=&Label:
+6=...
+7=di:name
+
+[DIALOG_34]
+0=Folder to ISO
+3=&Folder:
+4=&ISO file:
+5=&Label:
+6=Format:
+7=Start
 
 [DIALOG_A]
 0=Aktualizacja
@@ -296,7 +309,7 @@ Author=Fresta, updated to 2.8.6 by adijos
 40=&Status
 41=&Otwórz w Eksploratorze
 42=&Zgłoszenie pliku meta
-43=&Weryfikacja Hash Zawartości
+43=&Weryfikacja Hash Zawartości...
 44=Zgraj na &Dysk Twardy...
 45=Zgraj do &Obrazu ISO...
 46=&Włącz Xreveal
@@ -418,3 +431,7 @@ Author=Fresta, updated to 2.8.6 by adijos
 162=Opcjonalne
 163=Plik przesłany pomyślnie, dziękujemy!
 164=Zamknij to okno
+165=Change ISO &Label...
+166=&Folder to ISO...
+167=Please select or drag a ISO file here
+168=Please select or drag a folder here
