--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -32,7 +32,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 3=Restablecer
 
 [DIALOG_7]
-0=Estado
+0=Información
 
 [DIALOG_8]
 0=General
@@ -140,12 +140,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 [DIALOG_19]
 0=Atajos de Teclado
 3=Crea atajos de teclado para realizar acciones mientras Xreveal está en ejecución.
-4=Mostar menú de Xreveal:
-5=Mostrar ventana de ajustes:
-6=Habilitar/Deshabilitar Xreveal:
-7=Copiar a archivo ISO:
-8=Copiar a carpeta:
-9=Verificador de Hash del Contenido:
+4=Mostar menú de Xreveal
 
 [DIALOG_20]
 0=HD DVD
@@ -227,6 +222,24 @@ Author=Steven Rogers, Leandro Botella Penalva
 8=Clave pública:
 9=Firma:
 10=Número del dispositivo:
+11=Private key:
+12=Paste the private key to verify it
+
+[DIALOG_33]
+0=Change ISO Label
+1=&Change
+3=&ISO file:
+4=&Label:
+6=...
+7=di:name
+
+[DIALOG_34]
+0=Folder to ISO
+3=&Folder:
+4=&ISO file:
+5=&Label:
+6=Format:
+7=Start
 
 [DIALOG_A]
 0=Actualización de Software
@@ -296,7 +309,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 40=&Estado
 41=&Abrir en el Explorador
 42=&Envio de metafile
-43=Verificador de Hash del Contenido
+43=Verificador de Hash del Contenido...
 44=Copiar a &Carpeta...
 45=Copiar a Archivo &ISO...
 46=&Habilitar Xreveal
@@ -418,3 +431,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 162=Opcional
 163=Archivo enviado correctamente, ¡gracias!
 164=Cerrar esta ventana
+165=Change ISO &Label...
+166=&Folder to ISO...
+167=Please select or drag a ISO file here
+168=Please select or drag a folder here
