--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0409
 Name=English
-Version=2.8.6
+Version=2.8.9
 Author=
 1=OK
 2=Cancel
@@ -32,7 +32,7 @@ Author=
 3=Reset
 
 [DIALOG_7]
-0=Status
+0=Info
 
 [DIALOG_8]
 0=General
@@ -139,13 +139,8 @@ Author=
 
 [DIALOG_19]
 0=Hotkeys
-3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
-4=Show Xreveal system tray menu:
-5=Show settings window:
-6=Enable/Disable Xreveal:
-7=Rip to ISO file:
-8=Rip to folder:
-9=Content Hash Verifier:
+3=Create system-wide hotkeys to trigger specific commands while Xreveal is running.
+4=Show Xreveal menu
 
 [DIALOG_20]
 0=HD DVD
@@ -227,6 +222,24 @@ Author=
 8=Public key:
 9=Signature:
 10=Device number:
+11=Private key:
+12=Paste the private key to verify it
+
+[DIALOG_33]
+0=Change ISO Label
+1=&Change
+3=&ISO file:
+4=&Label:
+6=...
+7=di:name
+
+[DIALOG_34]
+0=Folder to ISO
+3=&Folder:
+4=&ISO file:
+5=&Label:
+6=Format:
+7=Start
 
 [DIALOG_A]
 0=Software Update
@@ -296,7 +309,7 @@ Author=
 40=&Status
 41=&Open in Explorer
 42=&Metafile submission
-43=&Content Hash Verifier
+43=&Content Hash Verifier...
 44=Rip to &Folder...
 45=Rip to &ISO File...
 46=&Enable Xreveal
@@ -418,3 +431,7 @@ Author=
 162=Optional
 163=File submitted successfully, thank you!
 164=Close this window
+165=Change ISO &Label...
+166=&Folder to ISO...
+167=Please select or drag a ISO file here
+168=Please select or drag a folder here
