--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -32,7 +32,7 @@ Author=Andex
 3=Réinitialiser
 
 [DIALOG_7]
-0=Statut
+0=Info
 
 [DIALOG_8]
 0=Général
@@ -140,12 +140,7 @@ Author=Andex
 [DIALOG_19]
 0=Raccourcis
 3=Les raccourcis créés ici fonctionnent dans Windows quand Xreveal s'exécute en arrière-plan.
-4=Afficher le menu:
-5=Paramètres:
-6=Activer/Désactiver:
-7=Copier en fichier ISO:
-8=Copier dans un dossier:
-9=Vérifier un BD/UHD:
+4=Afficher le menu
 
 [DIALOG_20]
 0=HD DVD
@@ -227,6 +222,24 @@ Author=Andex
 8=Clé publique:
 9=Signature:
 10=N° du dispositif:
+11=Private key:
+12=Paste the private key to verify it
+
+[DIALOG_33]
+0=Change ISO Label
+1=&Change
+3=&ISO file:
+4=&Label:
+6=...
+7=di:name
+
+[DIALOG_34]
+0=Folder to ISO
+3=&Folder:
+4=&ISO file:
+5=&Label:
+6=Format:
+7=Start
 
 [DIALOG_A]
 0=Mise à jour
@@ -418,3 +431,7 @@ Author=Andex
 162=Optionnel
 163=Le fichier a été transmis avec succès, merci!
 164=Fermer cette fenêtre
+165=Change ISO &Label...
+166=&Folder to ISO...
+167=Please select or drag a ISO file here
+168=Please select or drag a folder here
