--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -32,7 +32,7 @@ Author=jekovcar
 3=Сброс
 
 [DIALOG_7]
-0=Состояние
+0=Информация
 
 [DIALOG_8]
 0=Общие
@@ -140,12 +140,7 @@ Author=jekovcar
 [DIALOG_19]
 0=Горячие клавиши
 3=Системные горячие клавиши для запуска действий во время работы Xreveal.
-4=Показать меню Xreveal в трее:
-5=Показать окно настроек:
-6=Включить/Отключить Xreveal:
-7=Копировать в файл ISO:
-8=Копировать в папку:
-9=Проверка хэша содержимого:
+4=Показать меню Xreveal в трее
 
 [DIALOG_20]
 0=HD DVD
@@ -227,6 +222,24 @@ Author=jekovcar
 8=Public key:
 9=Signature:
 10=Device number:
+11=Private key:
+12=Paste the private key to verify it
+
+[DIALOG_33]
+0=Change ISO Label
+1=&Change
+3=&ISO file:
+4=&Label:
+6=...
+7=di:name
+
+[DIALOG_34]
+0=Folder to ISO
+3=&Folder:
+4=&ISO file:
+5=&Label:
+6=Format:
+7=Start
 
 [DIALOG_A]
 0=Обновление программы
@@ -296,7 +309,7 @@ Author=jekovcar
 40=&Состояние
 41=&Открыть в проводнике
 42=&Создать файл дампа
-43=Проверка хэша содержимого
+43=Проверка хэша содержимого...
 44=Копировать в &папку...
 45=Копировать в файл &ISO...
 46=&Включить Xreveal
@@ -418,3 +431,7 @@ Author=jekovcar
 162=Optional
 163=File submitted successfully, thank you!
 164=Close this window
+165=Change ISO &Label...
+166=&Folder to ISO...
+167=Please select or drag a ISO file here
+168=Please select or drag a folder here
