--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -32,7 +32,7 @@ Author=Harry Samwel, Sopor
 3=Återställ
 
 [DIALOG_7]
-0=Status
+0=Info
 
 [DIALOG_8]
 0=Allmänt
@@ -140,12 +140,7 @@ Author=Harry Samwel, Sopor
 [DIALOG_19]
 0=Snabbtangenter
 3=Du kan skapa systemomfattande snabbknappar för att trigga vissa funktioner medan Xreveal körs.
-4=Visa Xreveal i systemfältet:
-5=Visa inställningsfönstret:
-6=Aktivera/Avaktivera Xreveal:
-7=Rippa till ISO fil:
-8=Rippa till mapp:
-9=Verifiera hash för innehåll:
+4=Visa Xreveal i systemfältet
 
 [DIALOG_20]
 0=HD DVD
@@ -227,6 +222,24 @@ Author=Harry Samwel, Sopor
 8=Allmän nyckel:
 9=Signatur:
 10=Enhetsnummer:
+11=Private key:
+12=Paste the private key to verify it
+
+[DIALOG_33]
+0=Change ISO Label
+1=&Change
+3=&ISO file:
+4=&Label:
+6=...
+7=di:name
+
+[DIALOG_34]
+0=Folder to ISO
+3=&Folder:
+4=&ISO file:
+5=&Label:
+6=Format:
+7=Start
 
 [DIALOG_A]
 0=Programuppdatering
@@ -418,3 +431,7 @@ Author=Harry Samwel, Sopor
 162=Valfri
 163=Filen skickades, tack så mycket!
 164=Stäng detta fönster
+165=Change ISO &Label...
+166=&Folder to ISO...
+167=Please select or drag a ISO file here
+168=Please select or drag a folder here
