--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -84,7 +84,7 @@ Author=
 0=KeyDB
 3=Xreveal doesn't contain any decryption keys, you'll need a <a>key database</a> to make it work.
 4=keydb.cfg location
-6=&Find keys online if not found locally
+6=&Online search
 
 [DIALOG_13]
 0=My Drives
@@ -134,7 +134,6 @@ Author=
 
 [DIALOG_18]
 0=Register Xreveal
-3=Help
 4=Paste the license key you received into the box below.
 
 [DIALOG_19]
@@ -332,7 +331,7 @@ Author=
 63=Changes remaining
 64=Region %C
 65=&Always on top
-66=&Purchase
+66=&Buy Now
 67=Licensed to %s\r\nMax users: %d\r\nLicensed until: %s
 68=Forever
 69=&Register...
@@ -435,3 +434,4 @@ Author=
 166=&Folder to ISO...
 167=Please select or drag a ISO file here
 168=Please select or drag a folder here
+169=&Help
