--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -134,7 +134,6 @@ Author=bovirus (bovirus@gmail.com)
 
 [DIALOG_18]
 0=Registra Xreveal
-3=?
 4=Incolla nel riquadro qui sotto la chiave licenza ricevuta.
 
 [DIALOG_19]
@@ -435,3 +434,4 @@ Author=bovirus (bovirus@gmail.com)
 166=&Folder to ISO...
 167=Please select or drag a ISO file here
 168=Please select or drag a folder here
+169=&Aiuto
