--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0410
 Name=Italian (Italiano)
-Version=2.8.6
+Version=2.8.9
 Author=bovirus (bovirus@gmail.com)
 1=OK
 2=Annulla
@@ -84,7 +84,7 @@ Author=bovirus (bovirus@gmail.com)
 0=KeyDB
 3=Xreveal non contiene alcuna chiave di decrittazione.\nPer farlo funzionare è necessario un database di chiavi. <a>Maggiori info</a>.
 4=Percorso file keydb.cfg
-6=&Cerca chiavi online se non trovate localmente
+6=&Ricerca online
 
 [DIALOG_13]
 0=Mie unità
@@ -138,8 +138,8 @@ Author=bovirus (bovirus@gmail.com)
 
 [DIALOG_19]
 0=Tasti scelta rapida
-3=È possibile creare hotkeys globali per richiamare alcune azioni mentre Xreveal è in uso.
-4=Mostra il menu di Xreveal nell'area delle notifiche
+3=Crea hotkeys globali per richiamare specifiche azioni mentre Xreveal è in uso.
+4=Mostra il menu di Xreveal
 
 [DIALOG_20]
 0=HD DVD
@@ -221,24 +221,24 @@ Author=bovirus (bovirus@gmail.com)
 8=Chiave pubblica:
 9=Firma:
 10=Numero unità:
-11=Private key:
-12=Paste the private key to verify it
+11=Chaive privata:
+12=Incolla la chiave privata per verificarla
 
 [DIALOG_33]
-0=Change ISO Label
-1=&Change
-3=&ISO file:
-4=&Label:
+0=Cambia etichetta ISO
+1=&Cambia
+3=&File ISO:
+4=&Etichetta:
 6=...
-7=di:name
+7=di:nome
 
 [DIALOG_34]
-0=Folder to ISO
-3=&Folder:
-4=&ISO file:
-5=&Label:
-6=Format:
-7=Start
+0=Da cartella a ISO
+3=&Cartella:
+4=&File ISO:
+5=&Etichetta:
+6=Formato:
+7=Avvia
 
 [DIALOG_A]
 0=Aggiornamento programma
@@ -430,8 +430,8 @@ Author=bovirus (bovirus@gmail.com)
 162=Opzionale
 163=File inoltrato con successo, grazie!
 164=Chiudi questa finestra
-165=Change ISO &Label...
-166=&Folder to ISO...
-167=Please select or drag a ISO file here
-168=Please select or drag a folder here
+165=Cambia etichetta ISO...
+166=&Da cartella a ISO...
+167=Seleziona o trascina un file ISO qui
+168=Seleziona o trascina una cartella qui
 169=&Aiuto
