--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0804
 Name=Chinese (简体中文)
-Version=2.8.6
+Version=2.8.9
 Author=Tanuki
 1=确定
 2=取消
@@ -84,7 +84,7 @@ Author=Tanuki
 0=KeyDB
 3=Xreveal 不包含任何解密密钥，你需要密钥库才能使其工作，<a>了解更多</a>。
 4=keydb.cfg 路径
-6=在线查找密钥(&F)
+6=启用互联网访问(&E)
 
 [DIALOG_13]
 0=我的光驱
@@ -221,24 +221,24 @@ Author=Tanuki
 8=公钥:
 9=签名:
 10=设备号:
-11=Private key:
-12=Paste the private key to verify it
+11=私钥:
+12=粘贴私钥可验证私钥是否正确
 
 [DIALOG_33]
-0=Change ISO Label
-1=&Change
-3=&ISO file:
-4=&Label:
+0=修改 ISO 卷标
+1=修改(&C)
+3=&ISO 文件:
+4=卷标(&L):
 6=...
 7=di:name
 
 [DIALOG_34]
-0=Folder to ISO
-3=&Folder:
-4=&ISO file:
-5=&Label:
-6=Format:
-7=Start
+0=文件夹转换为 ISO
+3=文件夹(&F):
+4=&ISO 文件:
+5=卷标(&L):
+6=格式:
+7=开始
 
 [DIALOG_A]
 0=软件更新
@@ -430,8 +430,8 @@ Author=Tanuki
 162=可选
 163=文件提交成功，谢谢!
 164=关闭此窗口
-165=Change ISO &Label...
-166=&Folder to ISO...
-167=Please select or drag a ISO file here
-168=Please select or drag a folder here
+165=修改 ISO 卷标(&L)...
+166=文件夹转换为 ISO(&F)...
+167=请选择或拖动ISO文件至此
+168=请选择或拖动文件夹至此
 169=帮助
