--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -84,7 +84,7 @@ Author=
 0=KeyDB
 3=Xreveal doesn't contain any decryption keys, you'll need a <a>key database</a> to make it work.
 4=keydb.cfg location
-6=&Online search
+6=&Enable internet access
 
 [DIALOG_13]
 0=My Drives
@@ -127,7 +127,7 @@ Author=
 [DIALOG_17]
 0=Ripper
 3=Read retry count:
-4=Abort when ignored errors exceed :
+4=Abort when ignored errors exceed:
 5=Copy SSIF folder while ripping Blu-ray 3D to folder
 6=Append the drive status log to the rip log
 7=Show warning when creating a protected image
