--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x040C
 Name=French (Français)
-Version=2.8.6
+Version=2.8.9
 Author=Andex
 1=OK
 2=Annuler
@@ -32,7 +32,7 @@ Author=Andex
 3=Réinitialiser
 
 [DIALOG_7]
-0=Info
+0=Infos
 
 [DIALOG_8]
 0=Général
@@ -84,7 +84,7 @@ Author=Andex
 0=KeyDB
 3=Note: Xreveal ne contient aucune clé de déchiffrement!\nVous devez utiliser le fichier <a>keydb.cfg</a> pour que Xreveal puisse fonctionner.
 4=Emplacement du fichier 'keydb.cfg'
-6=&Rechercher la clé en ligne si non trouvée localement
+6=&Rechercher la clé en ligne
 
 [DIALOG_13]
 0=Lecteurs
@@ -126,7 +126,7 @@ Author=Andex
 
 [DIALOG_17]
 0=Copie
-3=&Tentatives de lecture:
+3=&Tentatives de relecture:
 4=&Abandonner lorsque le nombre d'erreurs ignorées dépasse:
 5=&Copier le dossier 'SSIF' lors de la copie d'un Blu-ray *3D* dans un dossier
 6=A&jouter l'état du lecteur au journal de copie
@@ -138,7 +138,7 @@ Author=Andex
 
 [DIALOG_19]
 0=Raccourcis
-3=Les raccourcis créés ici fonctionnent dans Windows quand Xreveal s'exécute en arrière-plan.
+3=Créez ici des raccourcis qui fonctionnent dans Windows quand Xreveal s'exécute en arrière-plan.
 4=Afficher le menu
 
 [DIALOG_20]
@@ -221,24 +221,24 @@ Author=Andex
 8=Clé publique:
 9=Signature:
 10=N° du dispositif:
-11=Private key:
-12=Paste the private key to verify it
+11=Clé privée:
+12=Coller la clé privée pour la vérifier
 
 [DIALOG_33]
-0=Change ISO Label
-1=&Change
-3=&ISO file:
-4=&Label:
+0=Modifier l'étiquette d'un fichier ISO
+1=&Modifier
+3=&Fichier ISO:
+4=&Etiquette:
 6=...
 7=di:name
 
 [DIALOG_34]
-0=Folder to ISO
-3=&Folder:
-4=&ISO file:
-5=&Label:
+0=Copier un dossier en ISO
+3=&Dossier:
+4=&Fichier ISO:
+5=&Etiquette:
 6=Format:
-7=Start
+7=Démarrer
 
 [DIALOG_A]
 0=Mise à jour
@@ -316,8 +316,8 @@ Author=Andex
 48=Paramètres...
 49=&Commentaires
 50=&Outils
-51=À propos de &Xreveal
-52=Quitter Xreveal
+51=A propos de Xreveal
+52=Quitter
 53=&Ejecter
 54=&Charger
 55=&Propriétés
@@ -430,8 +430,8 @@ Author=Andex
 162=Optionnel
 163=Le fichier a été transmis avec succès, merci!
 164=Fermer cette fenêtre
-165=Change ISO &Label...
-166=&Folder to ISO...
-167=Please select or drag a ISO file here
-168=Please select or drag a folder here
-169=&Aide
+165=Modifier l'étiquette ISO...
+166=Copier un dossier en ISO...
+167=Sélectionner ou déposer un fichier ISO ici
+168=Sélectionner ou déposer un dossier ici
+169=Aide
