--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -174,7 +174,7 @@ Author=Tanuki
 3=请指定或拖动源 keydb.db 以导入到 <a>%s</a> 中。
 
 [DIALOG_26]
-0=M2TS哈希值校验
+0=校验蓝光备份
 
 [DIALOG_27]
 0=声音
@@ -308,9 +308,9 @@ Author=Tanuki
 40=状态(&S)
 41=在资源管理器中打开(&O)
 42=生成元文件
-43=M2TS哈希值校验...(&C)
-44=复制到硬盘...(&F)
-45=复制到映像...(&I)
+43=校验蓝光备份(&C)...
+44=复制到硬盘(&F)...
+45=复制到映像(&I)...
 46=启用 Xreveal(&E)
 47=禁用 Xreveal(&D)
 48=设置(&S)
@@ -366,9 +366,9 @@ Author=Tanuki
 98=导入(&I)...
 99=导出(&E)...
 100=备注
-101=验证镜像
-102=验证文件夹
-103=验证光驱
+101=校验镜像
+102=校验文件夹
+103=校验光驱
 104=支持总线加密
 105=%s (光驱: %s)
 106=打开日志目录
@@ -431,7 +431,7 @@ Author=Tanuki
 163=文件提交成功，谢谢!
 164=关闭此窗口
 165=修改 ISO 卷标(&L)...
-166=文件夹转换为 ISO(&F)...
+166=文件夹转换为 &ISO...
 167=请选择或拖动ISO文件至此
 168=请选择或拖动文件夹至此
 169=帮助
