--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -431,7 +431,7 @@ Author=Fresta, updated to 2.8.6 by adijos
 163=Plik przesłany pomyślnie, dziękujemy!
 164=Zamknij to okno
 165=Change ISO &Label...
-166=&Folder to ISO...
+166=Folder to &ISO...
 167=Please select or drag a ISO file here
 168=Please select or drag a folder here
 169=Pomoc
