--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -431,7 +431,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 163=Archivo enviado correctamente, ¡gracias!
 164=Cerrar esta ventana
 165=Change ISO &Label...
-166=&Folder to ISO...
+166=Folder to &ISO...
 167=Please select or drag a ISO file here
 168=Please select or drag a folder here
 169=Ayuda
