--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -431,7 +431,7 @@ Author=Harry Samwel, Sopor
 163=Filen skickades, tack så mycket!
 164=Stäng detta fönster
 165=Change ISO &Label...
-166=&Folder to ISO...
+166=Folder to &ISO...
 167=Please select or drag a ISO file here
 168=Please select or drag a folder here
 169=Hjälp
