--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -431,7 +431,7 @@ Author=The Punisher
 163=Die Datei wurde erfolgreich übermittelt, vielen Dank!
 164=Dieses Fenster schließen.
 165=Change ISO &Label...
-166=&Folder to ISO...
+166=Folder to &ISO...
 167=Please select or drag a ISO file here
 168=Please select or drag a folder here
 169=Hilfe
