--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -431,7 +431,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 163=File submitted successfully, thank you!
 164=Close this window
 165=Change ISO &Label...
-166=&Folder to ISO...
+166=Folder to &ISO...
 167=Please select or drag a ISO file here
 168=Please select or drag a folder here
 169=Bantuan
