--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -431,7 +431,7 @@ Author=비너스걸 (VenusGirl)
 163=File submitted successfully, thank you!
 164=Close this window
 165=Change ISO &Label...
-166=&Folder to ISO...
+166=Folder to &ISO...
 167=Please select or drag a ISO file here
 168=Please select or drag a folder here
 169=도움말
